// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification types renders for JOIN_CHALLENGE 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 32,
        "paddingBottom": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Notifications are off
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    To receive updates about community challenges, please turn notifications on.
  </Text>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "width": 680,
        }
      }
      testID="allowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        GO TO SETTINGS
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#3CC8E6",
          "borderRadius": 50,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 680,
        }
      }
      testID="notNowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        NOT NOW
      </Text>
    </View>
  </View>
</View>
`;

exports[`notification types renders for JOIN_COMMUNITY 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 32,
        "paddingBottom": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Notifications are off
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    To receive updates from your MissionHub community, please turn notifications on.
  </Text>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "width": 680,
        }
      }
      testID="allowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        GO TO SETTINGS
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#3CC8E6",
          "borderRadius": 50,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 680,
        }
      }
      testID="notNowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        NOT NOW
      </Text>
    </View>
  </View>
</View>
`;

exports[`notification types renders for LOGIN 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 32,
        "paddingBottom": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Notifications are off
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </Text>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "width": 680,
        }
      }
      testID="allowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        GO TO SETTINGS
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#3CC8E6",
          "borderRadius": 50,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 680,
        }
      }
      testID="notNowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        NOT NOW
      </Text>
    </View>
  </View>
</View>
`;

exports[`notification types renders for ONBOARDING 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 32,
        "paddingBottom": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Notifications are off
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </Text>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "width": 680,
        }
      }
      testID="allowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        GO TO SETTINGS
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#3CC8E6",
          "borderRadius": 50,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 680,
        }
      }
      testID="notNowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        NOT NOW
      </Text>
    </View>
  </View>
</View>
`;

exports[`notification types renders for SET_REMINDER 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <View
    style={
      Object {
        "paddingVertical": 50,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/notificationOff.png",
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "#3CC8E6",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 32,
        "paddingBottom": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Notifications are off
  </Text>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    To receive reminders to take steps of faith, please turn notifications on.
  </Text>
  <View
    style={
      Object {
        "paddingTop": 20,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "width": 680,
        }
      }
      testID="allowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        GO TO SETTINGS
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#3CC8E6",
          "borderRadius": 50,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "margin": 8,
          "opacity": 1,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
          "width": 680,
        }
      }
      testID="notNowButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
          ]
        }
      >
        I DON'T WANT REMINDERS
      </Text>
    </View>
  </View>
</View>
`;
